--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,8 @@
     <div class="text-center">
       <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
       <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-      <small class="copyright">Developed with <i class="fa fa-heart"></i> by <a href="http://techstory.shma.so" target="_blank">KyoungTae Doh</a> for developers</small>
+      <p/>
+      <small class="copyright">Developed with <i class="fa fa-github"></i> by <a href="http://techstory.shma.so" target="_blank">ehrudxo</a> for developers</small>
     </div>
     <!--//container-->
   </footer>
