relative path dist

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!--script type="text/javascript" src="assets/plugins/popper.min.js" ></script-->
   <!-- custom js -->
   <!--script type="text/javascript" src="assets/js/main.js"></script-->
-  <script type="text/javascript" src="/dist/bundle.js"></script>
+  <script type="text/javascript" src="./dist/bundle.js"></script>
 
 </body>
 
